fix: mermaid subgraph bold titles are truncated
fixes #4

--- a/src/assets/stylesheets/redmine-kroki.css
+++ b/src/assets/stylesheets/redmine-kroki.css
@@ -32,3 +32,10 @@
 .kroki.dark svg {
   filter: invert(1) hue-rotate(180deg);
 }
+
+/* Mermaid */
+/* NOTE: Bold text is truncated in graph labels */
+.kroki .flowchart-label .cluster-label foreignObject,
+.kroki .flowchart-label .label foreignObject {
+  overflow: visible;
+}
